test/scc/decl/semantic-errors/069.t
void test(static int a)
{
}